--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -1,10 +1,8 @@
-
+name: container
 # GitHub Action CI
 
 on:
   - pull_request
-
-name: "Continuous Integration"
 
 jobs:
   build:
@@ -20,7 +18,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: "Build Docker image"
-        run: $(which docker) build --tag ${DOCKER_IMAGE}:latest . -f docker/Dockerfile
+        run: $(which docker) build --tag ${DOCKER_IMAGE}:latest . -f container/Dockerfile
 
       - name: "Run Docker image"
         run: $(which docker) run --interactive --rm --workdir=/app --volume ${GITHUB_WORKSPACE}:/app ${DOCKER_IMAGE}:latest
